# bos-ai

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-title.yml  release.yml
docs/architecture/: config-workspace.md  core.md  overview.md  protocol.md  runner.md
src/bos/: config_template.toml  core.py  exts.py  harness.py  workspace.py
src/bos/actor_commands/: system_cmd.py
src/bos/channels/: broadcast.py  http.py  http_client.py  telegram.py
src/bos/cli/: entry.py  tui_app.py
src/bos/cli/commands/: agent.py  auth.py  chat.py  init.py
src/bos/config/: __init__.py  template.toml  workspace.py
src/bos/core/: __init__.py  _utils.py  actor.py  agent.py  builtins.py  contract.py  defaults.py  harness.py  interceptors.py  llm.py  registry.py  state.py
src/bos/extensions/: __init__.py  all.py
src/bos/extensions/actor_commands/: system_cmd.py
src/bos/extensions/channels/: broadcast.py  http.py  http_client.py  telegram.py
src/bos/interceptors/: agent_step_relay.py
src/bos/mailboxes/: __init__.py  jsonl_mailbox.py
src/bos/memory_stores/: markdown_memory_store.py
src/bos/message_stores/: jsonl_message_store.py
src/bos/protocol/: __init__.py  commands.py  envelope.py  message_types.py
src/bos/providers/: antigravity_provider.py  gemini_cli_provider.py
src/bos/runner/: __init__.py  _main.py  proc.py  runner.py
src/bos/tools/: filesystem.py  knowledge.py  orchestration.py  system.py
tests/: test_bootstrap.py  test_broadcast_channel.py  test_harness.py  test_http_channel.py  test_mailbox.py  test_proc.py  test_runner.py  test_telegram_channel.py  test_tui_app.py  test_workspace_runtime.py
(+6 files in other folders)
