[project]
name = "bos-ai"
version = "0.1.0"
description = "Lightweight single-file agent framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "litellm==1.83.0",
    "python-dotenv>=1.2.2",
    "filelock>=3.19.1",
    "click>=8.1.7",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "beautifulsoup4>=4.14.3",
    "aiohttp>=3.13.5",
]

[project.urls]
Homepage = "https://github.com/bos-agent/bos-ai"


[project.scripts]
bos = "bos.cli.entry:main"

[project.optional-dependencies]
providers = [
    "oauth-cli-kit>=0.1.3",
]
all = [
    "oauth-cli-kit>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bos"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]

[tool.semantic_release]
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): {version} [skip ci]"
build_command = "python -m ensurepip --upgrade && python -m pip install build && python -m build"
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
mask_initial_release = false
